--- a/src/app/shared/main-layout/main-layout.component.html
+++ b/src/app/shared/main-layout/main-layout.component.html
@@ -11,8 +11,8 @@
     </li>
 
     <li class="nav-link log-status">
-      <a>login</a>
-      <a>logout</a>
+      <a routerLink="login" routerLinkActive="active">login</a>
+      <a (click)="logout()">logout</a>
     </li>
   </ul>
 </nav>
