--- a/src/app/shared/components/reserve-dialog/reserve-dialog.component.html
+++ b/src/app/shared/components/reserve-dialog/reserve-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>reserve driver {{ data.driver.name }}</h2>
+<h2 mat-dialog-title>reserve driver {{ data.driver.driverName }}</h2>
 
 <div mat-dialog-content>
   <mat-form-field>
