--- a/src/app/shared/components/driver-update-dialog/driver-update-dialog.component.html
+++ b/src/app/shared/components/driver-update-dialog/driver-update-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>update driver {{ data.driver.name }}</h2>
+<h2 mat-dialog-title>update driver {{ data.driver.driverName }}</h2>
 
 <div mat-dialog-content>
   <mat-form-field>
@@ -8,7 +8,7 @@
 
   <mat-form-field>
     <mat-label>status</mat-label>
-    <input matInput [(ngModel)]="data.driver.status">
+    <input matInput [(ngModel)]="data.driver.driverStatus">
   </mat-form-field>
 
   <mat-form-field>
