--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -41,10 +41,10 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="statusColumn">
       <div class="subcell">
-        <p class="upper" [ngClass]="{'reserved': (timerList[element.id].timer$ | async) > 0 && timerList[element.id].isShown}">
+        <p class="upper" [ngClass]="{'reserved': (timerList[element?.id].timer$ | async) > 0 && timerList[element?.id].isShown}">
           {{ element?.driverStatus }}
           <span>
-          {{timerList[element.id].isShown ? (timerList[element.id].timer$ | async) : ''}}
+          {{timerList[element?.id].isShown ? (timerList[element?.id].timer$ | async) : ''}}
           </span>
         </p>
         <p class="lower" style="overflow: hidden">{{ element?.notes }}</p>
@@ -63,11 +63,10 @@
       <div class="subcell">
         <p class="upper">{{ element?.zip }}</p>
         <p class="lower cells-blue">
-          <span *ngIf="true">{{
-              _showFloat(element?.distanceToZip) ?
-              _showFloat(element?.distanceToZip) :
-              ''
-            }}</span>
+          <span *ngIf="isNumber(element?.distanceToZip) as distance">
+            {{ showFloat(element?.distanceToZip) }}
+          </span>
+          <span *ngIf="!isNumber(element?.distanceToZip)">-</span>
         </p>
       </div>
     </mat-cell>
@@ -82,8 +81,8 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="stateCityColumn">
       <div class="subcell">
-        <p class="upper">{{ element.currentState }}shi</p>
-        <p class="lower">{{ element.currentCity }}za</p>
+        <p class="upper">{{ element?.currentState }}shi</p>
+        <p class="lower">{{ element?.currentCity }}za</p>
       </div>
     </mat-cell>
   </ng-container>
@@ -98,7 +97,7 @@
     <mat-cell *matCellDef="let element" class="timeAndVehicleColumn">
       <div class="subcell">
         <p class="upper">{{ element?.restTime | date: 'd-M-yy, h:mm a' }}</p>
-        <p class="lower">{{ element?.vehicleCapacity }}/{{ element.vehicleWeight }}</p>
+        <p class="lower">{{ element?.vehicleCapacity }}/{{ element?.vehicleWeight }}</p>
       </div>
     </mat-cell>
   </ng-container>
@@ -118,24 +117,24 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="flagsColumn">
         <div class="upper cells">
-            <div class="cell" *ngIf="element.lg"><i class="fa fa-check"></i></div>
-            <div class="cell" *ngIf="!element.lg"><i class="fa fa-times"></i></div>
+            <div class="cell" *ngIf="element?.lg"><i class="fa fa-check"></i></div>
+            <div class="cell" *ngIf="!element?.lg"><i class="fa fa-times"></i></div>
 
-            <div class="cell cell-medium" *ngIf="element.r"><i class="fa fa-check"></i></div>
-            <div class="cell cell-medium" *ngIf="!element.r"><i class="fa fa-times"></i></div>
+            <div class="cell cell-medium" *ngIf="element?.r"><i class="fa fa-check"></i></div>
+            <div class="cell cell-medium" *ngIf="!element?.r"><i class="fa fa-times"></i></div>
 
-            <div class="cell" *ngIf="element.ar"><i class="fa fa-check"></i></div>
-            <div class="cell" *ngIf="!element.ar"><i class="fa fa-times"></i></div>
+            <div class="cell" *ngIf="element?.ar"><i class="fa fa-check"></i></div>
+            <div class="cell" *ngIf="!element?.ar"><i class="fa fa-times"></i></div>
         </div>
         <div class="lower cells">
-            <div class="cell" *ngIf="element.p"><i class="fa fa-check"></i></div>
-            <div class="cell" *ngIf="!element.p"><i class="fa fa-times"></i></div>
+            <div class="cell" *ngIf="element?.p"><i class="fa fa-check"></i></div>
+            <div class="cell" *ngIf="!element?.p"><i class="fa fa-times"></i></div>
 
-            <div class="cell cell-medium" *ngIf="element.t"><i class="fa fa-check"></i></div>
-            <div class="cell cell-medium" *ngIf="!element.t"><i class="fa fa-times"></i></div>
+            <div class="cell cell-medium" *ngIf="element?.t"><i class="fa fa-check"></i></div>
+            <div class="cell cell-medium" *ngIf="!element?.t"><i class="fa fa-times"></i></div>
 
-            <div class="cell" *ngIf="element.dh"><i class="fa fa-check"></i></div>
-            <div class="cell" *ngIf="!element.dh"><i class="fa fa-times"></i></div>
+            <div class="cell" *ngIf="element?.dh"><i class="fa fa-check"></i></div>
+            <div class="cell" *ngIf="!element?.dh"><i class="fa fa-times"></i></div>
         </div>
     </mat-cell>
   </ng-container>
@@ -149,8 +148,8 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="driverNameAndAddressColumn">
       <div class="subcell">
-        <p class="upper">{{ element.driverName }}</p>
-        <p class="lower">{{ element.homeAddressState + ' ' + element.homeAddressCity}}</p>
+        <p class="upper">{{ element?.driverName }}</p>
+        <p class="lower">{{ element?.homeAddressState + ' ' + element?.homeAddressCity}}</p>
       </div>
     </mat-cell>
   </ng-container>
@@ -165,11 +164,11 @@
     <mat-cell *matCellDef="let element" class="isCitizenColumn">
       <div class="subcell">
         <p class="upper">
-          {{element.isCitizen.slice(0, 2)}}
+          {{element?.isCitizen?.slice(0, 2)}}
         </p>
         <p class="lower">
-          <span *ngIf="element.toCanada"><i class="fa fa-check"></i></span>
-          <span *ngIf="!element.toCanada"><i class="fa fa-times"></i></span>
+          <span *ngIf="element?.toCanada"><i class="fa fa-check"></i></span>
+          <span *ngIf="!element?.toCanada"><i class="fa fa-times"></i></span>
         </p>
       </div>
     </mat-cell>
@@ -194,13 +193,13 @@
       <div class="subcell">
         <div class="upper cells">
           <div class="cell">r</div>
-          <div class="cell cell-medium">{{ element.vehicleDoorSizeWidth }}</div>
-          <div class="cell">{{ element.vehicleDoorSizeHeight }}</div>
+          <div class="cell cell-medium">{{ element?.vehicleDoorSizeWidth }}</div>
+          <div class="cell">{{ element?.vehicleDoorSizeHeight }}</div>
         </div>
         <div class="lower cells cells-yellow">
-          <div class="cell">{{ element.vehicleInsideSizeLength }}</div>
-          <div class="cell cell-medium">{{ element.vehicleInsideSizeWidth }}</div>
-          <div class="cell">{{ element.vehicleInsideSizeHeight }}</div>
+          <div class="cell">{{ element?.vehicleInsideSizeLength }}</div>
+          <div class="cell cell-medium">{{ element?.vehicleInsideSizeWidth }}</div>
+          <div class="cell">{{ element?.vehicleInsideSizeHeight }}</div>
         </div>
       </div>
     </mat-cell>
@@ -226,7 +225,7 @@
       Driver Name
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="driverNameColumn">
-      {{ element.driverName }}
+      {{ element?.driverName }}
     </mat-cell>
   </ng-container>
 
@@ -235,7 +234,7 @@
       Call
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="driverContactColumn">
-      {{ element.driverPhoneNumber }}
+      {{ element?.driverPhoneNumber }}
       <a href="tel:+380954755108">calling</a>
     </mat-cell>
   </ng-container>
@@ -245,7 +244,7 @@
       Owner name
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="driverNameColumn">
-      {{ element.ownerName }}
+      {{ element?.ownerName }}
     </mat-cell>
   </ng-container>
 
@@ -254,7 +253,7 @@
       Call
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="driverContactColumn">
-      {{ element.ownerPhoneNumber }}
+      {{ element?.ownerPhoneNumber }}
     </mat-cell>
   </ng-container>
 
