--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -13,7 +13,7 @@
 
   <button mat-raised-button (click)="openUpdateDialog()">Update</button>
   <button mat-raised-button (click)="openReserveDialog()">Reserve</button>
-  <p *ngIf="chosenDriver?.id"><span *ngIf="timerList[chosenDriver.id].isShown">{{(timerList[chosenDriver.id].timer$ | async)}}</span></p>
+  <button mat-raised-button (click)="cancelReserve()">Cancel Reserve</button>
 </div>
 
 <table mat-table [dataSource]="dataSource" *ngIf="isFiltered || codes">
@@ -43,8 +43,8 @@
       <div class="subcell">
         <p class="upper" [ngClass]="{'reserved': (timerList[element?.id].timer$ | async) > 0 && timerList[element?.id].isShown}">
           {{ element?.driverStatus }}
-          <span>
-          {{timerList[element?.id].isShown ? (timerList[element?.id].timer$ | async) : ''}}
+          <span *ngIf="(timerList[element?.id].timer$ | async) as ownTimer">
+          {{timerList[element?.id].isShown ? formatTimer(ownTimer)  : ''}}
           </span>
         </p>
         <p class="lower" style="overflow: hidden">{{ element?.notes }}</p>
@@ -96,7 +96,7 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="timeAndVehicleColumn">
       <div class="subcell">
-        <p class="upper">{{ element?.restTime | date: 'd-M-yy, h:mm a' }}</p>
+        <p class="upper rest-time-cell">{{ element?.restTime | date: 'd-M-yy, h:mm a' }}</p>
         <p class="lower">{{ element?.vehicleCapacity }}/{{ element?.vehicleWeight }}</p>
       </div>
     </mat-cell>
@@ -192,7 +192,9 @@
     <mat-cell *matCellDef="let element" class="sizeColumn">
       <div class="subcell">
         <div class="upper cells">
-          <div class="cell">r</div>
+          <div class="cell clipboard">
+            <button class="clipboard-button" [cdkCopyToClipboard]="getEmailClipBoardMessage(element)">r</button>
+          </div>
           <div class="cell cell-medium">{{ element?.vehicleDoorSizeWidth }}</div>
           <div class="cell">{{ element?.vehicleDoorSizeHeight }}</div>
         </div>
@@ -214,7 +216,7 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="ETAColumn">
       <div class="subcell">
-        <p class="upper">ETA to PU</p>
+        <p class="upper">{{ countEtaToPu(element?.distanceToZip) | date :  'dd/MM/yyyy h:mm a'}}</p>
         <p class="lower">ETA to Drop</p>
       </div>
     </mat-cell>
@@ -234,8 +236,7 @@
       Call
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="driverContactColumn">
-      {{ element?.driverPhoneNumber }}
-      <a href="tel:+380954755108">calling</a>
+      <a [href]="'tel:'+element?.ownerPhoneNumber">calling</a>
     </mat-cell>
   </ng-container>
 
@@ -253,7 +254,7 @@
       Call
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="driverContactColumn">
-      {{ element?.ownerPhoneNumber }}
+      <a [href]="'tel:'+element?.ownerPhoneNumber">calling</a>
     </mat-cell>
   </ng-container>
 
